# mylogger

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  myloggerConfig.cmake.in  vcpkg.json
include/mylogger/: log.hpp
src/: context.cpp
tests/: CMakeLists.txt  main.cpp
